--- a/lib/TODOs/TODO.txt
+++ b/lib/TODOs/TODO.txt
@@ -1,16 +1,26 @@
 - Sa se schimbe what-ul cand schimbi where ul.
 - Distanta de la utilizator la local(pe a doua pagina)
 
+
+07.05.2020:
+
+-distanta
+-preturi
+-google maps
+-incarcare mai rapida restarurante + "load more"
+-logare cu facebook
+-profilul restaurantului
+-qr code pt user
+-scanare qr code
+-site
+
 De la tudor:
 
 la asian nu apar pozele 2
 ink-ul de la poza de search
-dureaza o eternitate pana se loaduiesc pozele
-merge execrabil google maps-ul
 
 facem interfata pe meniul 2 mai buna
 facem interfata pe minul 3 mai buna
 facem un meniu de drag in dreapta sau il scoatem de tot
 sa pun descrieri mai lungi
-implementam distanta
 buton arrow meniu 3 in stanga sus
