Removed ProgressBar from drawer&added new app icon

--- a/lib/TODOs/TODO.txt
+++ b/lib/TODOs/TODO.txt
@@ -6,8 +6,11 @@
 
 -profilul restaurantului
 -terminat scanare plus retinere in baza de date
--implementat reducerile personalizate
 -refferal (mai incolo)
+
+Post-release:
+
+-adaugat bara de progres(pentru scanari)
 
 De la tudor:
 
