Seating interface finished

--- a/lib/TODOs/TODO.txt
+++ b/lib/TODOs/TODO.txt
@@ -54,9 +54,10 @@ Altele:
 -tutorialul (tudor)
 -schimbat in romana 
 
-11.09.2020
--verificat procesul de scanare
--dialog dupa ce faci rezervare
--pagin cu istoricul rezervarilor
--starea latenta a aplicatiei
+PRELANSARE:
 
+- Schimbat totul in romana
+
+BONUS:
+- Adaugat limba engleza
+- Buton uber
