Finished the NEW MENU and Search Engine

--- a/lib/TODOs/TODO.txt
+++ b/lib/TODOs/TODO.txt
@@ -62,3 +62,6 @@ Categorie,Specific,Cati,Ambianta,Zona
 BONUS:
 - Adaugat limba engleza
 - Buton uber
+
+Uber
+- Access token: JA.VUNmGAAAAAAAEgASAAAABwAIAAwAAAAAAAAAEgAAAAAAAAH4AAAAFAAAAAAADgAQAAQAAAAIAAwAAAAOAAAAzAAAABwAAAAEAAAAEAAAAMT5PXDDut-7w_xwFyCUGG2nAAAAYNvXzElo-C0OSsravy2aiF-TSnWllvBlQziVeudZxTmjCSRb7iws6TvEZXHXs_q0lCNIGPS7QasEhMWpfV4ZGaIClqf5RkXRRlDLjvmYoSd8K4CumFhOmiBkxtjYwBfgDYSkvi7V1Ka1vTuESByYlZrCk6vKvB8nkPWM4PDt-9L4RsOjvGP8Rd4piBtWTTGL2_7YzfoANobF53SGHpGi2RIcjA7-C0MADAAAAI_xXb_XwnItqlF44iQAAABiMGQ4NTgwMy0zOGEwLTQyYjMtODA2ZS03YTRjZjhlMTk2ZWU
