--- a/lib/TODOs/TODO.txt
+++ b/lib/TODOs/TODO.txt
@@ -29,6 +29,15 @@ Inainte de release:
 
 Colors:
 FB8C00
+orice produs din gama de paste pahar de rose Petro Baselle
+orice fel principal pahar de vin fiert cramele cotnari
+0754042673 cotnari gabi sau vali
+0754407902 vin'arte
+0726551604 petro baselo adi 
+0729151399 adi liliac
+0721517222 mihai gitana cica e un vin bun
+0726390159 vali caii de la letea 
+
 
 Commands:
 
