--- a/lib/TODOs/TODO.txt
+++ b/lib/TODOs/TODO.txt
@@ -101,3 +101,10 @@ sendgrid
 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
 twilio
 d7c75fd2586b49dda3959bb9a84f732b
+
+
+
+Wine Street 2022 Big Update
+
+- reorganize code (providers)
+- reorganize UI
